# fabric-deploy-workflow

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  action.yml  pyproject.toml
.github/workflows/: ci.yml  fabric-deploy.yml  release.yml
examples/: README.md  basic-workflow.yml  branch-protected-deployment.yml  deploy-dev.yml  deploy-prod.yml  deploy-stage.yml  incremental-deployment.yml  multi-environment.yml  production-deployment.yml  reusable-workflow.yml  simple-auto-deploy.yml  simple-configuration.yml
src/fabric_deploy/: __init__.py  __main__.py
src/fabric_deploy/adapters/: azure_auth.py  fabric_workspace.py  git_ops.py
src/fabric_deploy/cli/: __init__.py  app.py
src/fabric_deploy/cli/commands/: deploy.py  validate.py
src/fabric_deploy/core/: __init__.py  delta.py  deploy.py  deployer.py  fabric_items.py  lakehouse.py  validate.py  validator.py
src/fabric_deploy/models/: __init__.py  config.py
src/fabric_deploy/utils/: auth.py  git_operations.py  lakehouse_processor.py  logging.py
